# softrd

./: .gitignore  .gitmodules  .travis.yml  Build.md  CNAME  README.md  build.sh  build_dependencies.md  build_issues.md  docker-compose.yml  requirement.txt  run_in_docker.sh  softrd.sln  start_docker.ps1  start_docker.sh
UnitTest1/: UnitTest1.vcxproj  softrd_test.cpp
core/: .clang-format  CMakeLists.txt  FindSoftrdCore.cmake  FindThirdParty.cmake  SoftrdCoreConfig.cmake.in  WORKSPACE  core.sh  softrd.vcxproj  softrd.vcxproj.filters
core/deprecated/: renderer.cc
core/deprecated/devices/: device.cc
core/deprecated/inputs/: BUILD  input.h
core/embind/: embind_renderer_api.cc  post_file.js  pre_file.js  softrd_api.js
core/lib/: SDL2.lib  assimp.lib
core/port/emscripten/: embind_renderer_api.cc  pre_file.js
core/src/: BUILD  CMakeLists.txt  main.cc  renderer.cc  renderer.h  test_api.cc  test_renderer_api.cc
core/src/common/: BUILD  CMakeLists.txt  light.h  material.h  mesh.h  model.cc  model.h  model_test.cc  primitive.h  texture.cc  texture.h  texture_test.cc
core/src/components/: CMakeLists.txt  camera.h  fragment.h  light.h  material.h  mesh.h  model.cc  model.h  primitive.h  texture.h  vertex.h
core/src/deprecated/: renderer.h
core/src/deprecated/devices/: BUILD
core/src/devices/: CMakeLists.txt  device.cc  device.h
core/src/inputs/: input.h
core/src/interface/: BUILD  CMakeLists.txt  renderer_api.cc  renderer_api.h
core/src/math/: BUILD  CMakeLists.txt  math_lib.h  math_util.h  matrix.h  plane.h  vector.h  vector_test.cc
core/src/modules/: BUILD  CMakeLists.txt  clipping.cc  clipping.h  fragment_shader.cc  fragment_shader.h  per_sample_processing.cc  per_sample_processing.h  primitive_assembly.cc  primitive_assembly.h  rasterizer.cc  rasterizer.h  vertex_loader.cc  vertex_loader.h  vertex_shader.cc  vertex_shader.h
core/src/renderer/: BUILD  CMakeLists.txt  engine.cc  engine.h  render_engine.cc  render_engine.h  rendering_pipeline.cc  rendering_pipeline.h  scene_manager.cc  scene_manager.h  scene_object.h
core/src/scene/: CMakeLists.txt  base_object.h  camera.cc  camera.h  camera_test.cc  scene_object.h
core/test/: CMakeLists.txt
core/test/math/: CMakeLists.txt  vector_test.cc
core/wasm_libs/assimp-wasm/: build-test.emscripten  test-assimp.cpp  test-assimp.data  test-assimp.html  test-assimp.js.mem
core/wasm_libs/assimp-wasm/assimp-es-dyn/lib/: libassimp.so.3.3.1
core/wasm_libs/assimp-wasm/assimp-es-dyn/lib/pkgconfig/: assimp.pc
core/wasm_libs/assimp-wasm/data/: suzanne.blend
deprecated/core/: SoftrdCoreConfig.cmake.in  core.sh
deprecated/core/src/devices/: CMakeLists.txt
deprecated/middleware/: binding.gyp
deprecated/middleware/src/: renderer_api_addon.h
docker/: Dockerfile  Dockerrun.aws.json  softrd-dist.dockerfile
frontend/: .eslintrc.js  .gitignore  .prettierrc.js  frontend.sh  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/server/: package.json  server.js
frontend/softrd/: index.js  package.json
frontend/softrd-js/: index.js  package.json  readme.md
frontend/src/: GUI.tsx  Hello.tsx  app.js  embind_renderer_api.js  embind_renderer_api.wasm  index.ejs  index.html  index.tsx  softrd_api.js  softrd_api.wasm  sum.test.js
frontend/src/Components/: ObjectBoard.tsx  TestMenu.tsx
frontend/src/Layouts/: LeftPanel.tsx  MainView.tsx  RightPanel.test.tsx  RightPanel.tsx
frontend/src/components/: ObjectBoard.test.tsx  ObjectBoard.tsx  SceneMenu.tsx  TestMenu.tsx  VectorInput.test.tsx
frontend/src/components/Layouts/: Menu.js
frontend/src/components/utils/: middleware_endpoint.js
frontend/src/electron/: electron.js  ipc.js  preload.js
frontend/src/interfaces/: object.test.ts  object.ts  vector.test.ts  vector.ts
frontend/src/layout/: Header.tsx  LeftPanel.test.tmp.tsx  LeftPanel.tsx  MainView.tsx  RightPanel.test.tsx  RightPanel.tsx
frontend/src/renderer/: index.ts
frontend/src/store/: index.ts  models.ts  objectList.ts  objectSelector.ts
frontend/src/store/actions/: objectList.ts  objectListAction.ts  (+2 more)
frontend/src/ui/: GUI.js  GUI.tsx
frontend/src/wasm/: softrd_api.js
frontend/styles/: main.scss
middleware/: CMakeLists.txt  binding.gyp  middleware.sh  package.json
middleware/src/: addon_init.cc  hello.cc  renderer_api_addon.cc  renderer_api_addon.h
middleware/test/: softrd_test.js
softrd/: WORKSPACE  softrd.vcxproj  softrd.vcxproj.filters
softrd/lib/: SDL2main.lib  SOIL.lib
softrd/resource/f-16/: f-16.mtl
softrd/src/: BUILD  camera.h  clipping.cpp  clipping.h  device.cpp  device.h  fragment.h  fragment_shader.cpp  fragment_shader.h  input.h  light.h  main.cc  main.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  per_sample_processing.cpp  per_sample_processing.h  primitive.h  primitive_assembly.cpp  primitive_assembly.h  rasterizer.cpp  rasterizer.h  renderer.cc  renderer.cpp  renderer.h  texture.h  util.h  vertex.h  vertex_loader.cpp  vertex_loader.h  vertex_post_processing.cpp  vertex_post_processing.h  vertex_shader.cpp  vertex_shader.h
softrd/src/components/: BUILD  camera.h  fragment.h  light.h  material.h  model.cc  model.h  texture.h  vertex.h
softrd/src/devices/: BUILD  device.cc  device.cpp  device.h
softrd/src/inputs/: input.h
softrd/src/math/: BUILD  math_lib.h  matrix.h  plane.h  vector.h
softrd/src/modules/: BUILD  clipping.cc  clipping.h  fragment_shader.cc  fragment_shader.h  per_sample_processing.h  primitive_assembly.cpp  primitive_assembly.h  rasterizer.cc  rasterizer.h  vertex_loader.h  vertex_shader.cc  vertex_shader.h
softrd/src/utils/: BUILD
softrd/test/: main.cpp
softrd_gui/: .eslintrc.js  .prettierrc.js  package-lock.json  package.json  webpack.config.js
softrd_gui/src/: App.js  app.js  index.js
softrd_gui/src/components/: GUI.js
softrd_gui/src/electron/: electron.js
softrd_gui/styles/: main.css  main.scss
softrd_js/: binding.gyp  package-lock.json  package.json
softrd_js/test/: hello.js
softrd_test/: softrd_test.cpp  softrd_test.vcxproj  softrd_test.vcxproj.filters  stdafx.cpp
(+27 files in other folders)
