macro(add_gtest_exe exe)
    add_executable(${exe} ${ARGV})
    target_link_libraries(${exe} GTest::gtest)
    if(EMSCRIPTEN)
        add_test(NAME ${exe} COMMAND node ${exe}.js)
    endif()
endmacro()

add_subdirectory(common)
add_subdirectory(modules)
add_subdirectory(renderer)
add_subdirectory(interface)
add_subdirectory(math)
add_subdirectory(scene)